infra/k3s/overlays/staging/patch-postgres-svc-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrape-postgres
spec:
  type: ClusterIP
