infra/k3s/overlays/staging/patch-temporal-svc-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrape-temporal
spec:
  type: ClusterIP
