infra/k3s/overlays/staging/patch-temporal-ui-svc-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrape-temporal-ui
spec:
  type: ClusterIP
